<resources>
    <string name="app_name">MoneyTracks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="earnings">Earnings</string>
    <string name="expenses">Expenses</string>
    <string name="results">Results</string>
    <string name="submit">Submit</string>
    <string name="total">Total:</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="delete_database">Clear Data</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_question">Are you sure you want to clear the database?</string>
    <string name="options">Options</string>
    <string name="after_chosen_day">After</string>
    <string name="before_chosen_day">Before</string>
    <string name="at_chosen_day">At</string>
    <string name="shared_preference_file_key">com.chiu.moneytracks.SHARED_PREFERENCE_FILE_KEY</string>
    <string name="chosen_date">com.chiu.moneytracks.CHOSEN_DATE_KEY</string>
    <string name="switch_state">com.chiu.moneytracks.SWITCH_STATE_KEY</string>
    <string name="date_filter_at_state">com.chiu.moneytracks.DATE_FILTER_AT_STATE_KEY</string>
    <string name="date_filter_after_state">com.chiu.moneytracks.DATE_FILTER_AFTER_STATE_KEY</string>
    <string name="date_filter_before_state">com.chiu.moneytracks.DATE_FILTER_BEFORE_STATE_KEY</string>
    <string name="date_filter_state_key">com.chiu.moneytracks.DATE_FILTER_STATE_KEY</string>
    <string name="date_selected_to_add_key">com.chiu.moneytracks.DATE_SELECTED_KEY</string>
    <string name="income_type_key">com.chiu.moneytracks.INCOME_TYPE_KEY</string>
</resources>