<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/income_date_label"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/date"
        app:layout_constraintEnd_toStartOf="@id/income_description_label"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@+id/income_date_label"
        app:layout_constraintEnd_toStartOf="@+id/income_description_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/income_description_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="@id/income_amount_label"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/income_date_label"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@+id/income_description_label"
        app:layout_constraintEnd_toStartOf="@+id/income_amount_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/income_amount_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/income_description_label"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/income_divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/income_description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/income_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/income_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="?attr/actionBarSize" />


</androidx.constraintlayout.widget.ConstraintLayout>